--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
 	<title></title>
 </head>
-<body>
-<h1>Git show</h1>
-</body>
+	<body>
+		<h1>Git</h1>
+		<h2>Trabalhando em equipe com Controle e Segurança</h2>
+
+		<p>Um curso que explora os beneficios de utilizar o Git como ferramenta de controle de versão para projetos em qualquer linguagem, em qualquer plataforma.</p>
+
+		<h3>Principais Benefícios:</h3>
+		<ul>
+			<li>Funciona de maneira distribuída</li>
+			<li>Permite a edição concorrente de arquivos do projetos</li>
+			<li>Não depende de uma conexão ativa com um servidor</li>
+		</ul>
+	</body>
 </html>
