--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 		<p>Um curso que explora os beneficios de utilizar o Git como ferramenta de controle de versão para projetos em qualquer linguagem, em qualquer plataforma.</p>
 
+		<p>Teste interativo</p>
+
 		<h3>Principais Benefícios:</h3>
 		<ul>
 			<li>Funciona de maneira distribuída</li>
